# PandasArrow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  concat.cpp  concat.h  core.cpp  core.h  data_variant.h  dataframe.cpp  dataframe.h  dataframe_playground.cpp  datetimelike.h  generate_stream_file.cpp  group_by.h  macros.h  main.cpp  ndarray.h  ndframe.h  pandas_arrow.h  random.h  resample.cpp  resample.h  scalar.cpp  scalar.h  scan_s3.cpp  series.cpp  series.h  stringlike.h  vcpkg.json
CmakeBuildDebug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CmakeBuildDebug/.cmake/api/v1/reply/: cache-v2-ceb1f65eca944ea54b86.json  cmakeFiles-v1-8335bcbe58ae1ff51eea.json  codemodel-v2-c8b3924e974afc9ce98d.json  directory-third_party.arrow.cpp-Debug-15ea554f341e1891be3f.json  directory-third_party.arrow.cpp.src.arrow-Debug-c8f01ad144afc554cb5d.json  directory-third_party.arrow.cpp.src.arrow.acero-Debug-6c7311eb762bcc7483e3.json  directory-third_party.arrow.cpp.src.arrow.array-Debug-d19ab9f420a7c9aa13fb.json  directory-third_party.arrow.cpp.src.arrow.c-Debug-c5ea45430e3367aab1ea.json  directory-third_party.arrow.cpp.src.arrow.compute-Debug-ccf298f910135ef00b27.json  directory-third_party.arrow.cpp.src.arrow.compute.kernels-Debug-0bf6f14330d359de9974.json  directory-third_party.arrow.cpp.src.arrow.compute.row-Debug-823c5918469e7ee1977f.json  directory-third_party.arrow.cpp.src.arrow.csv-Debug-5381365ed1a27c52fd21.json  directory-third_party.arrow.cpp.src.arrow.dataset-Debug-ceace97924c7429a4553.json  directory-third_party.arrow.cpp.src.arrow.extension-Debug-3f2cdd9b81207eaadf56.json  directory-third_party.arrow.cpp.src.arrow.filesystem-Debug-b304086a1036a2325565.json  directory-third_party.arrow.cpp.src.arrow.gpu-Debug-c424b3547d9a21858396.json  directory-third_party.arrow.cpp.src.arrow.json-Debug-876d27ffd509a24530da.json  directory-third_party.arrow.cpp.src.arrow.tensor-Debug-518d4a87df7012b552e7.json  directory-third_party.arrow.cpp.src.arrow.testing-Debug-c651cdd95b25c6c623a3.json  directory-third_party.arrow.cpp.src.arrow.vendored-Debug-dc6354d798ec7b7c3ded.json  directory-third_party.arrow.cpp.src.arrow.vendored.double-conversion-Debug-a064b92aa70673fa6c07.json  directory-third_party.arrow.cpp.src.arrow.vendored.pcg-Debug-245f8eda87eb75aeb872.json  directory-third_party.arrow.cpp.src.arrow.vendored.portable-snippets-Debug-9911bf799b504d734575.json  directory-third_party.arrow.cpp.src.parquet-Debug-6c79ffe693df21129d0e.json  directory-third_party.arrow.cpp.src.parquet.api-Debug-e3223c4b23414afaa4c5.json  directory-third_party.arrow.cpp.src.parquet.arrow-Debug-5d3194b93ce8b0a7a107.json  index-2024-02-06T23-40-48-0093.json  target-arrow-Debug-d6391a2e0711dc9db002.json  target-arrow-integration-Debug-cf459743b5d27403c44f.json  target-arrow-tests-Debug-11e62174eb45c4efad40.json  target-arrow_acero-Debug-eec5a772acd9672aaaba.json  target-arrow_acero_objlib-Debug-bb049643df3edccfceba.json  target-arrow_acero_shared-Debug-fab247fe93595f42c7e7.json  target-arrow_cuda-Debug-50c7e4bdd2cdf2191f0e.json  target-arrow_cuda-all-Debug-b200c35fe8f93e6611c0.json  target-arrow_cuda-tests-Debug-cc251732a54a82d49668.json  target-arrow_cuda_objlib-Debug-e39bc651a3fd862e3712.json  target-arrow_cuda_shared-Debug-3110a8d293ecbef661da.json  target-arrow_dataset_objlib-Debug-490981df7a589dfe75a1.json  target-arrow_dataset_shared-Debug-8b0cc69366756a79aef9.json  (+17 more)
CmakeBuildRelease/: CMakeCache.txt  build.ninja  cmake_install.cmake
CmakeBuildRelease/.cmake/api/v1/reply/: cache-v2-58a79b0b4818e3cce69f.json  cmakeFiles-v1-9c527ef0cc859b1929a8.json  codemodel-v2-555240eb7dd1dc436ea9.json  directory-third_party.arrow-Release-2d5873c243594bbcc6fb.json  directory-third_party.arrow.cpp-Release-c6388242bd14e604514d.json  directory-third_party.arrow.cpp.src.arrow-Release-32d2137f113d2dee6cca.json  directory-third_party.arrow.cpp.src.arrow.acero-Release-ac783f7d818666e08066.json  directory-third_party.arrow.cpp.src.arrow.compute-Release-cfb0b76ed4ebb9306f86.json  directory-third_party.arrow.cpp.src.arrow.compute.kernels.additional-Release-055c973002377f1b8792.json  directory-third_party.arrow.cpp.src.arrow.csv-Release-d20f5518e0fe53b39cf2.json  (+48 more)
arrow/: CMakeLists.txt
arrow/compute/: CMakeLists.txt  exec_internal.h
arrow/compute/kernels/: aggregate_internal.h  aggregate_var_std_internal.h  autocorr.h  base_arithmetic_internal.h  codegen_internal.h  common.h  common_internal.h  corr.h  cov.h  cumprod.cpp  cumprod.h  pct_change.h  shift.h  util_internal.h
arrow/util/: int128_internal.h
cmake/: dependencies.cmake  fetch_rapids.cmake  get_cudf.cmake
cudf/: CMakeLists.txt  cudf_utils.cpp  cudf_utils.h  dataframe.cpp  dataframe.h  scalar.cpp  scalar.h  series.h
src/: README.md  aws_s3_reader.cpp  aws_s3_reader.h  concat.cpp  concat.h  core.cpp  core.h  data_variant.h  dataframe.cpp  dataframe.h  datetimelike.h  group_by.h  json_utils.cpp  json_utils.h  list_s3_files.cpp  list_s3_files.h  macros.h  ndframe.cpp  ndframe.h  pandas_arrow.h  pd_core_macros.h  random.h  resample.cpp  resample.h  scalar.cpp  scalar.h  series.cpp  series.h  stringlike.h
src/cudf/: cudf_utils.cpp  dataframe.cpp  dataframe.h  series.cpp  series.h
test/: CMakeLists.txt  benchmark.cpp  concat.cpp  core_test.cpp  custom_kernel_test.cpp  dataframe_test.cpp  grouper.cpp  hash_practise.cpp  scalar_test.cpp  series_test.cpp
test/cudf_examples/: load_and_create_df.cpp
tests/: CMakeLists.txt  concat_test.cpp  core_test.cpp  custom_kernel_test.cpp  dataframe_aggregation_test.cpp  dataframe_arithmetric_test.cpp  dataframe_indexing_test.cpp  dataframe_iterator_test.cpp  dataframe_selection_test.cpp  dataframe_test.cpp  downsample_test.cpp  hash_practise.cpp  range_generate_test.cpp  rolling_test.cpp  scalar_test.cpp  series_aggregation_test.cpp  series_arithmetric_test.cpp  series_indexing_test.cpp  series_iterator_test.cpp  series_resample_test.cpp  series_selection_test.cpp  series_test.cpp
tests/cudf_examples/: CMakeLists.txt  dataframe_resample_test.cpp  time_it.h
